fix(styles/global): scrollbar is attached to 'div' not 'body'

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -65,6 +65,7 @@ html {
 body {
   position: relative;
   min-height: 100%;
+  overflow: hidden;
   margin: 0;
 }
 
@@ -76,4 +77,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--background);
   color: var(--on-background);
+}
+
+div#__next {
+  width: 100vw;
+  height: 100vh;
+  overflow: auto;
 }
